backend/k8s/wildcard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploydash-wildcard-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: "*.api-deploydash.nstsdc.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploydash-backend
            port:
              number: 80
